updated imagery and naming

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 
 		<div class="row">
 			<div class="twelve columns">
-				<img src="{{base}}/img/header.png" />
+				<img src="{{base}}/img/Main_Promo.png" />
 
 				<!-- <h2>IPI Autumn Planning Conference 2012</h2>
 				<p>5<sup>th</sup> October 2012 <strong>Gibson Hotel, Dublin</strong> register now.</p>
