--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,9 +43,24 @@
 <div id="wrapper" style="background-image:url({{base}}/img/bg.png);">
 
 		<div class="row">
-			<div class="twelve columns">
-				<img src="{{base}}/img/Main_Promo.png" />
-
+			<div id="main_banner" class="twelve columns" style="background-image:url({{base}}/img/Main_Promo.png)">
+				<!--<img src="{{base}}/img/Main_Promo.png" />-->
+				<div class="four columns">
+					&nbsp;
+				</div>
+				<div class="eight columns">
+					<div id="action">
+				<h2>Be the first to hear when the CFP and registration open.</h2>
+				<form accept-charset="UTF-8" action="/2013/emails" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="wZpN3TBMzlOilEEtrnEn3q/ssrKOjo1rW6QhoGochPw=" /></div>
+					<h3 class="">Sign up for our mailing list * </h3>
+				        <input id="address" name="address" placeholder="Email" type="text" value="" />
+				        <input class="button" name="commit" type="submit" value="Sign up" />
+				</form>
+				<h3 class="twitter">or follow us <a href="http://twitter.com/@irishplaninst">@irishplaninst</a></h3>
+				</div>
+				</div>
+				
+				
 				<!-- <h2>IPI Autumn Planning Conference 2012</h2>
 				<p>5<sup>th</sup> October 2012 <strong>Gibson Hotel, Dublin</strong> register now.</p>
 				<hr />--> 
