--- a/foundation/custom.css
+++ b/foundation/custom.css
@@ -64,3 +64,14 @@
 #ipi-link {background:#FFF6E5;}
 #ipi-link a {padding:10px;background:#000;color:#FFF;margin-top:5px;border-radius:5px;font-size:17px;}
 #ipi-link a:hover {background:#C60F13;}
+
+#main_banner {background:no-repeat;}
+div#action{width:570px;padding:408px 0 0 0px;text-align:left;}
+#main_banner h2 {font-size: 1.2em; margin: .4em 0;color:#fff;}
+div#action form h3{color:#9fd1ba;text-transform:uppercase;font-size:1.4em;margin:0 0 5px 0;color:#fff;}
+div#action form{background-color:rgba(0,0,0,0.4);float:left;width:310px;padding:10px 20px 20px 20px;margin-right:20px}
+div#action form h3{color:#9fd1ba;text-transform:uppercase;font-size:1.4em;margin:0 0 5px 0;}
+div#action form h3.error{color:#DF3636}form input{font-size:1.2em;padding:5px;border:none;width:200px}
+form input.button{background:#8e1f18;color:#fff;border:none;width:auto;font-size:1.4em;padding:6px 10px 3px 10px}
+h3.twitter{font-size:1.6em;margin-right:60px; color:#fff;}
+div#footer{margin:0 auto}
