--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,14 +65,15 @@
 		
 			<div id="footer">
 				<div class="row">
-					<div class="eight columns">
+					<div class="twelve columns">
 						<p>&copy;2012 Irish Planning Institute <br />
-							Site deisgned by <a>Colin Broderick</a>. Powered by Jekyll &amp; Github Pages</p>
+							<h4 style="color:#fff;">And don’t forget -- there are other events on at <a style="font-weight:bold;" href="http://www.irishplanninginstitute.ie/ipi/events/">IPI.ie</a>!</h3></p>
 						</div>
-					<div class="four columns">
-						<p class="social">
+						
+					<div class="twelve columns">
+					<p class="social">
 							{% include social.html %}
-							</p>
+							</p>	
 					</div>
 				</div>
 			</div>
