--- a/foundation/custom.css
+++ b/foundation/custom.css
@@ -74,4 +74,4 @@ div#action form h3{color:#9fd1ba;text-transform:uppercase;font-size:1.4em;margin
 div#action form h3.error{color:#DF3636}form input{font-size:1.2em;padding:5px;border:none;width:200px}
 form input.button{background:#8e1f18;color:#fff;border:none;width:auto;font-size:1.4em;padding:6px 10px 3px 10px}
 h3.twitter{font-size:1.6em;margin-right:60px; color:#fff;}
-div#footer{margin:0 auto}
+div#footer{margin:0 auto; text-align: center;}
