updated mailchimp form on bottom of home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,23 +56,23 @@
 <form action="http://irishplanninginstitute.us1.list-manage1.com/subscribe/post?u=5dccd374a4301bcb0b6d5466e&amp;id=ce879b4700" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	
 <div class="mc-field-group">
-	<label for="mce-EMAIL">SIGN UP FOR OUR MAILING LIST * </label>
+	<h3 class="">Sign up for our mailing list * </h3>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+	</div>	<div class="clear"><input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
 </div>
 
 <!--End mc_embed_signup-->
-				<h2>Be the first to hear when the CFP and registration open.</h2>
+			<!--	<h2>Be the first to hear when the CFP and registration open.</h2>
 				<form accept-charset="UTF-8" action="/2013/emails" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="wZpN3TBMzlOilEEtrnEn3q/ssrKOjo1rW6QhoGochPw=" /></div>
 					<h3 class="">Sign up for our mailing list * </h3>
 				        <input id="address" name="address" placeholder="Email" type="text" value="" />
 				        <input class="button" name="commit" type="submit" value="Sign up" />
-				</form>
+				</form>-->
 				<h3 class="twitter">or follow us <a href="http://twitter.com/@irishplaninst">@irishplaninst</a></h3>
 				</div>
 				</div>
