--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -67,12 +67,12 @@
 </div>
 
 <!--End mc_embed_signup-->
-			<!--	<h2>Be the first to hear when the CFP and registration open.</h2>
-				<form accept-charset="UTF-8" action="/2013/emails" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="wZpN3TBMzlOilEEtrnEn3q/ssrKOjo1rW6QhoGochPw=" /></div>
+				<h2>Be the first to hear when the CFP and registration open.</h2>
+			<!--	<form accept-charset="UTF-8" action="/2013/emails" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="wZpN3TBMzlOilEEtrnEn3q/ssrKOjo1rW6QhoGochPw=" /></div>
 					<h3 class="">Sign up for our mailing list * </h3>
 				        <input id="address" name="address" placeholder="Email" type="text" value="" />
 				        <input class="button" name="commit" type="submit" value="Sign up" />
-				</form>-->
+				</form> -->
 				<h3 class="twitter">or follow us <a href="http://twitter.com/@irishplaninst">@irishplaninst</a></h3>
 				</div>
 				</div>
