--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,7 +57,7 @@
 	
 <div class="mc-field-group">
 	<h3 class="">Sign up for our mailing list * </h3>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="email" value="" name="EMAIL" placeholder="Email" class="required email" id="mce-EMAIL">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
