--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,8 @@
 	<!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width" />
 	<title>{{ page.title }}</title>
+	<meta name="description" content="{{ page.description }}">
+	<meta name="revisit-after" content="10 days">
 
 	<!-- Included CSS Files (Uncompressed) -->
 	<!--
@@ -67,7 +69,7 @@
 </div>
 
 <!--End mc_embed_signup-->
-				<h2>Be the first to hear when the CFP and registration open.</h2>
+				<h2>Be the first to hear when the paper titles are published and registration opens.</h2>
 			<!--	<form accept-charset="UTF-8" action="/2013/emails" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="wZpN3TBMzlOilEEtrnEn3q/ssrKOjo1rW6QhoGochPw=" /></div>
 					<h3 class="">Sign up for our mailing list * </h3>
 				        <input id="address" name="address" placeholder="Email" type="text" value="" />
