updated speakers and layout for conf

--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -90,6 +90,10 @@
 			</div>
 
 			<div class="four columns">
+				<div class="block">
+					<img src="http://farm9.staticflickr.com/8456/8072052014_c548fcfe64.jpg" />
+					<em>IPI President, Joanna Kelly MIPI</em>
+				</div>
               <div class="block">
 				<p class="vevent">
 					<a href="http://tiles.mapbox.com/rusty/map/map-y2zx7z5c"><img src="http://api.tiles.mapbox.com/v3/rusty.map-bkyvw9y9/-5.92996,54.59647,15/283x180.png" /></a>
