--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -39,10 +39,15 @@
 		<div class="twelve columns">
 			<div class="navbar1 hide-for-small">
 				<a href="{{base}}/" class="home">Home</a>
+				{% assign home_nav = site.pages %}
+				{% assign nav = 'home' %}
+				{% include home_nav %}
+				
+				<!--
 				<a href="{{base}}/">Home</a>
 				<a href="{{base}}/pages/programme">Programme</a>
 				<a href="{{base}}/pages/speakers">Speakers</a>
-				<a href="{{base}}/pages/venue">Venue</a>
+				<a href="{{base}}/pages/venue">Venue</a> -->
              <!-- <a href="http://www.irishplanninginstitute.ie/uploads/files/IPI%202012%20Autumn%20conference%20brochure.pdf" class="button radius large alert has-tip" style="margin-left:45px;" data-width="210" title="Non IPI members must download form and return to IPI Office.">Booking Form</a>
 			
               <a href="http://www.irishplanninginstitute.ie/ipi/conference-tickets/" class="button radius large alert has-tip" data-width="210" title="An IPI.ie login is required for online registration">Register Online</a>-->
