added prose defaults, updated images and remade part of layout to delete joanna

--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -96,16 +96,18 @@
 			</div>
 
 			<div class="four columns">
+				{% if page.custom_img %}
 				<div class="block">
-					<img src="http://farm9.staticflickr.com/8456/8072052014_c548fcfe64.jpg" />
+					<img src="http://dl.dropbox.com/u/85348868/Joanna--Kelly_web.jpg" />
 					<em>IPI President, Joanna Kelly MIPI</em>
 				</div>
+				{% endif %}
               <div class="block">
 				<p class="vevent">
 					<a href="http://tiles.mapbox.com/rusty/map/map-y2zx7z5c"><img src="http://api.tiles.mapbox.com/v3/rusty.map-bkyvw9y9/-5.92996,54.59647,15/283x180.png" /></a>
 					The <span class="summary">IPI Planning Conference 2013</span> 
-					takes place on October 5th 2012 from
-					<abbr class="dtstart" title="2013-04-26T08:45:00+01:00">08h45</abbr>&ndash;<abbr class="dtend" title="2013-04-28T16:00:00+01:00">16h00</abbr> at 
+					takes place on April 25th - 26th 2012 from
+					<abbr class="dtstart" title="2013-04-25T08:45:00+01:00">08h45</abbr>&ndash;<abbr class="dtend" title="2013-04-26T16:00:00+01:00">16h00</abbr> at 
 					<span class="location">Belfast City Hall, Belfast</span> 
 					(<a class="url" href="http://ipi.ie">More Info</a>)
 				</p>
