sticky mobile top nav

--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -57,6 +57,7 @@
 			<div class="show-for-small">
 				<div class="row">
 				  <div class="twelve columns">
+				<div class="contain-to-grid sticky"> 
 				    <nav class="top-bar">
 				      <ul>
 				        <!-- Title Area -->
@@ -79,9 +80,11 @@
 				        </ul>
 				      </section>
 				    </nav>
+				</div>
 				  </div>
 				</div>
 			</div>
+			
 		</div>
 	</div>
 </div>
