--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -126,7 +126,7 @@
 				<p class="vevent">
 					<a href="http://tiles.mapbox.com/rusty/map/map-y2zx7z5c"><img src="http://api.tiles.mapbox.com/v3/rusty.map-bkyvw9y9/-5.92996,54.59647,15/283x180.png" /></a>
 					The <span class="summary">IPI Planning Conference 2013</span> 
-					takes place on April 25th - 26th 2012 from
+					takes place on April 25th - 26th 2013 from
 					<abbr class="dtstart" title="2013-04-25T08:45:00+01:00">08h45</abbr>&ndash;<abbr class="dtend" title="2013-04-26T16:00:00+01:00">16h00</abbr> at 
 					<span class="location">Belfast City Hall, Belfast</span> 
 					(<a class="url" href="http://ipi.ie">More Info</a>)
@@ -150,7 +150,7 @@
 				<div class="row">
 					<div class="eight columns">
 						<p>&copy;2012 Irish Planning Institute <br />
-							Site deisgned by <a>Colin Broderick</a>. Powered by Jekyll &amp; Github Pages</p>
+							Site designed by <a>Colin Broderick</a>. Powered by Jekyll &amp; Github Pages</p>
 						</div>
 					<div class="four columns">
 						<p class="social">
