--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -124,7 +124,7 @@
 				{% endif %}
               <div class="block">
 				<p class="vevent">
-					<a href="http://tiles.mapbox.com/rusty/map/map-y2zx7z5c"><img src="http://api.tiles.mapbox.com/v3/rusty.map-bkyvw9y9/-5.92996,54.59647,15/283x180.png" /></a>
+					<a href="https://maps.google.ie/maps?ie=UTF-8&q=belfast+city+hall&fb=1&gl=ie&hq=belfast+city+hall&cid=0,0,761741224627250184&ei=3UEnUcriGoW6hAfsv4DADA&ved=0CKQBEPwSMAA"><img src="http://api.tiles.mapbox.com/v3/rusty.map-bkyvw9y9/-5.92996,54.59647,15/283x180.png" /></a>
 					The <span class="summary">IPI Planning Conference 2013</span> 
 					takes place on April 25th - 26th 2013 from
 					<abbr class="dtstart" title="2013-04-25T08:45:00+01:00">08h45</abbr>&ndash;<abbr class="dtend" title="2013-04-26T16:00:00+01:00">16h00</abbr> at 
